--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-auth-backend",
+  "name": "final-project-backend",
   "version": "1.0.0",
   "description": "Starter project to get up and running with express quickly",
   "scripts": {
@@ -11,15 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.8.3",
+    "@babel/helper-compilation-targets": "^7.14.4",
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-list-endpoints": "^5.0.0",
     "mongoose": "^5.8.10",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/helpers": "^7.14.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
