--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.8.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "mongoose": "^5.8.10",
