--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
     "@babel/helper-compilation-targets": "^7.14.4",
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0"
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "validator": "^13.6.0"
   }
 }
