--- a/backend/package.json
+++ b/backend/package.json
@@ -10,25 +10,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.14.3",
     "@babel/helper-compilation-targets": "^7.14.4",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
-    "mongoose": "^5.8.10",
-    "nodemon": "^2.0.2"
+    "mongoose": "^5.12.12",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "@babel/helpers": "^7.14.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-import": "^0.13.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
