habit schema created

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "mongoose": "^5.12.12",
+    "mongoose-type-email": "^1.1.2",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
