--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
+    "express-validator": "^6.11.1",
     "mongoose": "^5.12.12",
     "mongoose-type-email": "^1.1.2",
     "nodemon": "^2.0.7"
