--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "moment": "^2.29.1",
     "react": "^16.12.0",
+    "react-check-calendar": "^1.0.1",
     "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.2.0",
