--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "uniqid": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
