--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
+    "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
     "uniqid": "^5.3.0"
   },
