--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.2.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
